--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>New Selvam Sweet & Bakery - Premium Traditional Sweets</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
@@ -15,9 +16,7 @@
           <span class="announcement-item" style="color: white;">
             <p><strong>🤤 </strong>Everyone's Grabbing our <strong>Diwali Special Combo! </strong><em><strong>(Over 7000+ Combos Sold already)</strong></em></p>
           </span>&nbsp;&nbsp;&nbsp;&nbsp;
-          <!-- <span class="announcement-item" style="color: white;">
-            <p><strong>🤤 </strong>Everyone's Grabbing our <strong>Diwali Special Combo! </strong><em><strong>(Over 7000+ Combos Sold already)</strong></em></p>
-          </span>&nbsp;&nbsp;&nbsp;&nbsp; -->
+          
           <span class="announcement-item" style="color: white;">
             <p>🥳 <a href="#products" title="Diwali Special Sweets & Snacks"><strong>Enjoy FREE Goodies worth ₹454+ Upto 15% on Diwali Special Combos </strong></a></p>
           </span>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -104,17 +103,17 @@
           <h3>Visit Our Store</h3>
           <p>📍 Abdul Hakeem College, oppsite, Melvisharam, Tamil Nadu 632509</p>
           <p>📞 +91 96005 54330</p>
-          <p>✉️ order@newselvamsweets.com</p>
+          <p>✉️ <a href="mailto:order@newselvamsweets.com" class="email-link">order@newselvamsweets.com</a></p>
           <h3>Store Hours</h3>
           <p>Monday - Saturday: 5:30 AM - 10:30 PM</p>
           <p>Sunday: 8:00 AM - 8:00 PM</p>
         </div>
         <form class="contact-form" id="contactForm">
-          <input type="text" placeholder="Your Name" required>
-          <input type="email" placeholder="Your Email" required>
-          <input type="tel" placeholder="Your Phone">
-          <textarea placeholder="Your Message" rows="5" required></textarea>
-          <button type="submit" class="cta-button">Send Message</button>
+          <input type="text" id="contactName" placeholder="Your Name" required>
+          <input type="email" id="contactEmail" placeholder="Your Email" required>
+          <input type="tel" id="contactPhone" placeholder="Your Phone" required>
+          <textarea id="contactMessage" placeholder="Your Message" rows="5" required></textarea>
+          <button type="submit" class="cta-button">Send Message via WhatsApp</button>
         </form>
       </div>
     </div>
@@ -133,9 +132,18 @@
     <div class="footer-column footer-map">
       <h4>Find Us</h4>
       <div class="map-container">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.949773857639!2d79.29120167411938!3d12.910949716207059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bad3503dcec4d77%3A0x349da8d052b35b1f!2sNEW%20SELVAM%20SWEETS%26%20BAKERY!5e0!3m2!1sen!2sin!4v1760453832425!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.949773857639!2d79.29120167411938!3d12.910949716207059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bad3503dcec4d77%3A0x349da8d052b35b1f!2sNEW%20SELVAM%20SWEETS%26%20BAKERY!5e0!3m2!1sen!2sin!4v1760453832425!5m2!1sen!2sin" 
+          width="100%" 
+          height="200" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy" 
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
       </div>
     </div>
+
     <div class="footer-column footer-social">
       <h4>Follow Us</h4>
       <div class="social-icons">
@@ -147,18 +155,12 @@
         </a>
       </div>
     </div>
-    
-    <!-- Font Awesome for Social Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   </div>
 
   <div class="footer-bottom">
     <p>© 2025 Selvam Bakery. All Rights Reserved.</p>
   </div>
 </footer>
-
-<!-- Font Awesome for Social Icons -->
-<script src="https://kit.fontawesome.com/a2e0e6e9f3.js" crossorigin="anonymous"></script>
 
   <!-- Cart Sidebar -->
   <div class="cart-overlay" id="cartOverlay"></div>
@@ -186,6 +188,16 @@
       <div class="modal-body" id="modalBody">
         <!-- Modal content will be loaded here -->
       </div>
+    </div>
+  </div>
+
+  <!-- Beautiful Alert Message Box -->
+  <div class="custom-alert-overlay" id="customAlert">
+    <div class="custom-alert-box" id="customAlertBox">
+      <div class="custom-alert-icon" id="customAlertIcon">✅</div>
+      <h3 class="custom-alert-title" id="customAlertTitle">Success!</h3>
+      <p class="custom-alert-message" id="customAlertMessage">Your message has been sent successfully.</p>
+      <button class="custom-alert-button" id="customAlertButton">OK</button>
     </div>
   </div>
 
